--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,7 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('io.springfox:springfox-swagger2:2.9.2')
+	compile('io.springfox:springfox-swagger-ui:2.9.2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
