--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('io.springfox:springfox-swagger2:2.9.2')
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
+
+	// dependencies for testing
+	testCompile ('io.rest-assured:rest-assured:3.1.1')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
