--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 movie-service.url=https://movie-service.herokuapp.com/
 rating-service.url=https://movie-rating-service.herokuapp.com/
 
+# Logging
+logging.level.com.zuehlke=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
 # Hystrix
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 hystrix.threadpool.default.coreSize=10
