update property names

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # External services
-movie-service.url=https://movie-service.herokuapp.com/
-rating-service.url=https://movie-rating-service.herokuapp.com/
+endpoint.movie-service.url=https://movie-service.herokuapp.com/
+endpoint.rating-service.url=https://movie-rating-service.herokuapp.com/
 
 # Logging
 logging.level.com.zuehlke=DEBUG
