--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencyManagement {
 
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.boot:spring-boot-starter-actuator'
 	compile 'io.springfox:springfox-swagger2:2.6.1'
 	compile 'io.springfox:springfox-swagger-ui:2.6.1'
 	compile 'org.springframework.cloud:spring-cloud-starter-feign'
