--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 # Hystrix
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 hystrix.threadpool.default.coreSize=10
+
+# Health indicators (do not enable for production env!)
+management.security.enabled=false
