configure hystrix circuit breaker

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	compile 'io.springfox:springfox-swagger2:2.6.1'
 	compile 'io.springfox:springfox-swagger-ui:2.6.1'
 	compile 'org.springframework.cloud:spring-cloud-starter-feign'
+	compile 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+	compile 'org.springframework.cloud:spring-cloud-starter-hystrix-dashboard'
 	compile 'io.github.openfeign:feign-jackson:9.5.0'
 
 	// dependencies for testing
