--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # External services
-endpoint.movie-service.url=https://movie-service.herokuapp.com/
-endpoint.rating-service.url=https://movie-rating-service.herokuapp.com/
+endpoint.movie-service.url=https://my-movie-service.herokuapp.com/
+endpoint.rating-service.url=https://my-rating-service.herokuapp.com/
 
 # Logging
 logging.level.com.zuehlke=DEBUG
@@ -9,6 +9,11 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 # Hystrix
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 hystrix.threadpool.default.coreSize=10
+
+# Circuit breaker config
+hystrix.command.RatingServiceApi#getRatingsByMovieId.circuitBreaker.requestVolumeThreshold=2
+hystrix.command.RatingServiceApi#getRatingsByMovieId.circuitBreaker.errorThresholdPercentage=50
+hystrix.command.RatingServiceApi#getRatingsByMovieId.metrics.rollingStats.timeInMilliseconds=20000
 
 # Health indicators (do not enable for production env!)
 management.security.enabled=false
