--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 hystrix.threadpool.default.coreSize=10
 
 # Circuit breaker config
+# See https://github.com/Netflix/Hystrix/wiki/Configuration#circuitBreaker
 hystrix.command.RatingServiceApi#getRatingsByMovieId.circuitBreaker.requestVolumeThreshold=2
 hystrix.command.RatingServiceApi#getRatingsByMovieId.circuitBreaker.errorThresholdPercentage=50
 hystrix.command.RatingServiceApi#getRatingsByMovieId.metrics.rollingStats.timeInMilliseconds=20000
