set port environment variable for heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${PORT:8080}
+
 # External services
 endpoint.movie-service.url=https://my-movie-service.herokuapp.com/
 endpoint.rating-service.url=https://my-rating-service.herokuapp.com/
