--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,13 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "gradle.plugin.com.dorongold.plugins:task-tree:1.3.1"
 	}
 }
 
@@ -15,6 +19,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "com.dorongold.task-tree"
 
 group = 'com.zuehlke'
 version = '0.0.1-SNAPSHOT'
@@ -47,17 +52,17 @@ dependencies {
 
 def webappDir = "$projectDir/src/main/webapp"
 
-// gets called from the java plugin build task
-processResources {
-	dependsOn "copyFrontendDist"
+sourceSets {
+	main {
+		resources {
+			srcDirs = ["$webappDir/dist", "$projectDir/src/main/resources"]
+		}
+	}
 }
 
-// copies the built frontend content into the static resources directory
-task copyFrontendDist(type: Copy) {
-	dependsOn "buildFrontend"
-
-	from "$webappDir/dist/webapp"
-	into "$projectDir/src/main/resources/static"
+// gets called from the java plugin build task
+processResources {
+    dependsOn "buildFrontend"
 }
 
 // builds the frontend webapp into src/main/webapp/dist
@@ -75,5 +80,5 @@ task installFrontend(type:Exec) {
 	workingDir "$webappDir"
 	inputs.dir "$webappDir"
 	group = BasePlugin.BUILD_GROUP
-	commandLine "npm", "install"
+    commandLine "npm", "install"
 }
