--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
+    "test-singlerun": "ng test --watch=false",
     "lint": "ng lint"
   },
   "private": true,
