install node and npm before running tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,13 +30,24 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
+      # TODO create custom Docker image with Node and Yarn Installed
+      - run:
+          name: Download Node
+          command: curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash
+      - run:
+          name: Install Node
+          command: sudo apt-get install -y nodejs
+      - run:
+          name: update-npm
+          command: sudo npm install -g npm@latest
+
+      # TODO: move tests to a separate step
       - run:
           name: Run server tests
           command: gradle test
 
-      # TODO: run angular frontend tests (requires npm installed on the machine)
-      #      - run:
-      #          name: Run client tests
-      #          command: gradle testFrontend
+      - run:
+          name: Run client tests
+          command: gradle testFrontend
 
       # TODO: on a successful build => deploy to heroku
