--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
-    "test-singlerun": "ng test --watch=false",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint"
   },
   "private": true,
