--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,3 @@
-# Java Gradle CircleCI 2.0 configuration file
-# Check https://circleci.com/docs/2.0/language-java/ for more details
 version: 2
 jobs:
   build:
@@ -9,6 +7,10 @@ jobs:
       # Docker image provided by CircleCI with pre-installed java, node and chrome
       # https://hub.docker.com/r/circleci/openjdk/
       - image: circleci/openjdk:8-jdk-node-browsers
+
+    environment:
+        JUNIT_REPORT_PATH: ./junit/
+        JUNIT_REPORT_NAME: test-results.xml
 
     steps:
       # Check out the master branch of the project repository
@@ -28,20 +30,24 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
+      # Run the backend java tests
       - run:
           name: Run server tests
           command: gradle test
 
+      # Run the frontend js tests
       - run:
           name: Run client tests
           command: gradle testFrontend
 
+      # Save test result reports
       - run:
-          name: Save server test results
+          name: Save test results
           command: |
               mkdir -p ~/junit/
               find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
           when: always
+
       - store_test_results:
           path: ~/junit
       - store_artifacts:
