--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,4 +50,22 @@ jobs:
       - store_artifacts:
           path: ~/junit
 
-      # TODO: on a successful build => deploy to heroku
+  deploy:
+    steps:
+      - checkout
+      - run:
+          name: Deploy to Heroku
+          command: |
+              git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
