--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,8 @@ jobs:
           path: ~/junit
 
   deploy:
+    docker:
+      - image: circleci/openjdk:8-jdk-node-browsers
     steps:
       - checkout
       - run:
