--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,11 +61,14 @@ jobs:
           command: docker build -t movies .
 
       - run:
+          name: Setup Heroku
+          command: bash .circleci/setup-heroku.sh
+
+      - run:
           name: Deploy to Heroku
           command: |
-              docker login --username=$HEROKU_USER_NAME --password=$HEROKU_API_KEY registry.heroku.com
-              docker tag movies registry.heroku.com/$HEROKU_APP_NAME/web
-              docker push registry.heroku.com/$HEROKU_APP_NAME/web
+              heroku container:push
+              heroku container:release
 
 workflows:
   version: 2
