login first before pushing to container registry

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,7 @@ jobs:
       - run:
           name: Deploy to Heroku
           command: |
+              heroku container:login
               heroku container:push web
               heroku container:release web
 
