redirect unknown server calls to the frontend index.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=${PORT:8080}
 
+# Disable default whitelabel error page
+server.error.whitelabel.enabled=false
+
+# Base path for our backend's endpoints
+api.base.path=/api/v1
+
 # External services
 endpoint.movie-service.url=https://my-movie-service.herokuapp.com/
 endpoint.rating-service.url=https://my-rating-service.herokuapp.com/
